# prefix-arena

./: .codespellignore  .codespellrc  .gitignore  .markdown-link-check.json  .mdformat.toml  .pre-commit-config.yaml  .yamllint.yaml  Cargo.toml  LICENSE-MIT  README.md
.github/agents/: commit-assistant.agent.md
.github/workflows/: ci.yml
src/: lib.rs  prefix_arena.rs  staging_buffer.rs
